fix captcha position on mobile

--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -1748,7 +1748,6 @@ h1 {
 
 .body-hidden {
   overflow: hidden;
-  position: absolute;
   height: 100%;
   width: 100%; }
 
