--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -41,7 +41,7 @@ h1{
 
 .body-hidden{
   overflow: hidden;
-  position: absolute;
+  //position: absolute;
   height: 100%;
   width: 100%;
 }
